--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ header {
     padding: 20px;
 }
 
-/* Text Section */
 .text {
     width: 60%;
 }
@@ -32,12 +31,12 @@ header {
 }
 
 .image {
-    width: 40%;
+    width: 40px;
     text-align: center;
 }
 
 .image img {
-    width: 100%;
+    width: 100px;
     max-width: 300px;
 }
 
