--- a/style.css
+++ b/style.css
@@ -1,48 +1,70 @@
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-}
-
-header {
-    background-color: #2fa37a;
-    color: white;
-    padding: 15px;
-}
-
-.container {
-    display: flex;
-    background-color: white;
-    margin: 20px;
-    padding: 20px;
-}
-
-.text {
-    width: 60%;
-}
-
-.text h2 {
-    color: #2fa37a;
-    margin-bottom: 10px;
-}
-
-.text p {
-    line-height: 1.6;
-}
-
-.image {
-    width: 40px;
-    text-align: center;
-}
-
-.image img {
-    width: 100px;
-    max-width: 300px;
-}
-
-footer {
-    background-color: #2fa37a;
-    color: white;
-    text-align: center;
+ body{
+    background:black;
+ }
+ .header {
     padding: 10px;
-}
+     display: flex;
+     justify-content: space-between;
+     
+     color: white;
+ }
+
+ .footer {
+     background-color:rgb(250, 250, 250);
+ }
+
+ .container {
+     margin: 0px;
+ }
+
+ * {
+     margin: 0px;
+ }
+
+ .menu {
+     display: flex;
+ }
+
+ .menu li{
+    list-style:none;
+    margin: 5px;
+    
+ }
+ .menu li a{
+    text-decoration: none;
+    color:rgb(79, 77, 77);
+ } .header {
+    padding: 10px;
+     display: flex;
+     justify-content: space-between;
+     background-color: rgb(79, 77, 77);
+     color: white;
+ }
+
+ .footer {
+     background-color: silver;
+ }
+
+ .container {
+     margin: 0px;
+     color: white;
+ }
+
+ * {
+     margin: 0px;
+ }
+
+ .menu {
+     display: flex;
+ }
+
+ .menu li{
+    list-style:none;
+    margin: 5px;
+    color: white;
+    
+ }
+ .menu li a{
+    text-decoration: none;
+    color:white;
+ }
